linode/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-first
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 8080
  selector:
    app: hello-kubernetes-first
